Print page renders basically correctly   - layout is decent for short lists   - the wider lists are not right   - not sure why printArea has incorrect sizing, even though     the arrangement of divs is correct.   - footer location gets messed up because printArea is the wrong size.

--- a/fmt/print.css
+++ b/fmt/print.css
@@ -8,9 +8,14 @@
 }
 
 .gtd-list {
-    float: left;
+    /*float: left;*/
     /*width: 200px;*/
     font-size: 10px;
+    padding: 5px;
+}
+
+.gtd-left {
+    float: left;
 }
 
 .gtd-list-title {
@@ -31,17 +36,20 @@
 .gtd-footer {
     font-style: italic;
     font-size: 0.75em;
+    float: bottom;
 }
 
 .multiContainer {
-    width: 100%;
-    display: table;
+    /*width: 200px;*/
+    /*width: 100%;
+    height: 90%;*/
+    /*display: table;*/
 }
-.multiContainer > div {
-    display: table-cell;
-    background: white; //lightgrey;
+/*.multiContainer > div {*/
+    /*display: table-cell;*/
+    /*background: white; //lightgrey;
     padding: 5px;
-}
+}*/
 
 @media print {
     footer {page-break-after: always;}
